Added Development environment GTM

--- a/tickevents-placeholder/src/index.prod.html
+++ b/tickevents-placeholder/src/index.prod.html
@@ -16,7 +16,7 @@
   <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
 
-  <!-- Google Tag Manager Development -->
+  <!-- Google Tag Manager Production -->
   <script>
     (function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
@@ -24,10 +24,10 @@
           new Date().getTime(), event: 'gtm.js'
       }); var f = d.getElementsByTagName(s)[0],
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl + '&gtm_auth=hTBsmXk-VhvUgVNwHrad3w&gtm_preview=env-26&gtm_cookies_win=x'; f.parentNode.insertBefore(j, f);
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-MR7N3LJ');
   </script>
-  <!-- End Google Tag Manager Development -->
+  <!-- End Google Tag Manager Production -->
 </head>
 
 <body>
