--- a/tickevents-placeholder/src/index.prod.html
+++ b/tickevents-placeholder/src/index.prod.html
@@ -24,7 +24,7 @@
           new Date().getTime(), event: 'gtm.js'
       }); var f = d.getElementsByTagName(s)[0],
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl + '&gtm_auth=38h7k1ux_m2MYbtbbahDBQ&gtm_preview=env-1&gtm_cookies_win=x'; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-MR7N3LJ');
   </script>
   <!-- End Google Tag Manager Production -->
